@@ -6,7 +6,7 @@
 #define WINDOW_Y		16
 //#define WINDOW_WIDTH	128
 #define WINDOW_WIDTH	296
-#define WINDOW_HEIGHT	296
+#define WINDOW_HEIGHT	314
 #define GROUP_NAME		"grpIngameVoteMisc"
 
 // Macros //
@@ -73,40 +73,41 @@ menuDef {
 	BUTTONEXT( 6+.5*(WINDOW_WIDTH-18)+6, 122, .5*(WINDOW_WIDTH-18), 14, "ANTI-LAG OFF", .24, 11, exec "cmd callvote antilag 0"; uiScript closeingame, settingEnabled CV_SVS_ANTILAG voteFlag CV_SVF_ANTILAG )
 	BUTTONEXT( 6+.5*(WINDOW_WIDTH-18)+6, 140, .5*(WINDOW_WIDTH-18), 14, "SURRENDER", .24, 11, exec "cmd callvote surrender"; uiScript closeingame, voteFlag CV_SVF_SURRENDER )
 
-	BUTTONEXT( 6, 158, WINDOW_WIDTH-12, 14, "COMPETITION SETTINGS", .24, 11, exec "cmd callvote comp"; uiScript closeingame, voteFlag CV_SVF_COMP )
-	BUTTONEXT( 6, 176, WINDOW_WIDTH-12, 14, "PUBLIC SETTINGS", .24, 11, exec "cmd callvote pub"; uiScript closeingame, voteFlag CV_SVF_PUB )
+	BUTTONEXT( 6, 158, WINDOW_WIDTH-12, 14, "COIN TOSS", .24, 11, exec "cmd callvote cointoss"; uiScript closeingame, voteFlag CV_SVF_COINTOSS )
+	BUTTONEXT( 6, 176, WINDOW_WIDTH-12, 14, "COMPETITION SETTINGS", .24, 11, exec "cmd callvote comp"; uiScript closeingame, voteFlag CV_SVF_COMP )
+	BUTTONEXT( 6, 194, WINDOW_WIDTH-12, 14, "PUBLIC SETTINGS", .24, 11, exec "cmd callvote pub"; uiScript closeingame, voteFlag CV_SVF_PUB )
 
-	MULTILEFT( 8, 194+2, .80*(WINDOW_WIDTH-18), 10, "Warmup Damage:", .2, 8, "ui_voteWarmupDamage", cvarFloatList { "None" 0 "Enemies" 1 "Everyone" 2 } voteFlag CV_SVF_WARMUPDAMAGE, "Select the warm-up damage mode to vote on" )
-	NAMEDBUTTONEXT( "bttnextWarmupDamage", 6+.80*(WINDOW_WIDTH-18)+6, 194, .20*(WINDOW_WIDTH-18), 14, "OK", .24, 11, uiScript voteWarmupDamage; uiScript closeingame, voteFlag CV_SVF_WARMUPDAMAGE )
+	MULTILEFT( 8, 212+2, .80*(WINDOW_WIDTH-18), 10, "Warmup Damage:", .2, 8, "ui_voteWarmupDamage", cvarFloatList { "None" 0 "Enemies" 1 "Everyone" 2 } voteFlag CV_SVF_WARMUPDAMAGE, "Select the warm-up damage mode to vote on" )
+	NAMEDBUTTONEXT( "bttnextWarmupDamage", 6+.80*(WINDOW_WIDTH-18)+6, 212, .20*(WINDOW_WIDTH-18), 14, "OK", .24, 11, uiScript voteWarmupDamage; uiScript closeingame, voteFlag CV_SVF_WARMUPDAMAGE )
 
 	itemDef {
 		name		"nfleftbackTimelimit:"
 		group		GROUP_NAME
-		rect		$evalfloat(76+8) $evalfloat(212+2) $evalfloat(.45*(WINDOW_WIDTH-18)-76) 10
+		rect		$evalfloat(76+8) $evalfloat(230+2) $evalfloat(.45*(WINDOW_WIDTH-18)-76) 10
 		style		WINDOW_STYLE_FILLED
 		backcolor	.5 .5 .5 .2
 		visible		1
 		voteFlag	CV_SVF_TIMELIMIT
 		decoration
 	}
-	NUMERICFIELDLEFTEXT( 8, 212+2, .80*(WINDOW_WIDTH-18), 10, "Time Limit:", .2, 8, "ui_voteTimelimit", 6, voteFlag CV_SVF_TIMELIMIT, "Specify a time limit to vote on" )
-	NAMEDBUTTONEXT( "bttnextTimelimit", 6+.80*(WINDOW_WIDTH-18)+6, 212, .20*(WINDOW_WIDTH-18), 14, "OK", .24, 11, uiScript voteTimelimit; uiScript closeingame, voteFlag CV_SVF_TIMELIMIT )
+	NUMERICFIELDLEFTEXT( 8, 230+2, .80*(WINDOW_WIDTH-18), 10, "Time Limit:", .2, 8, "ui_voteTimelimit", 6, voteFlag CV_SVF_TIMELIMIT, "Specify a time limit to vote on" )
+	NAMEDBUTTONEXT( "bttnextTimelimit", 6+.80*(WINDOW_WIDTH-18)+6, 230, .20*(WINDOW_WIDTH-18), 14, "OK", .24, 11, uiScript voteTimelimit; uiScript closeingame, voteFlag CV_SVF_TIMELIMIT )
 
-	MULTILEFT( 8, 230+2, .80*(WINDOW_WIDTH-18), 10, "Game Type:", .2, 8, "ui_voteGameType", cvarFloatList { "Single-Map Objective" 2 "Stopwatch" 3 "Last Man Standing" 5 } voteflag CV_SVF_GAMETYPE, "Select the game type to vote on" )
-	NAMEDBUTTONEXT( "bttnextGameType", 6+.80*(WINDOW_WIDTH-18)+6, 230, .20*(WINDOW_WIDTH-18), 14, "OK", .24, 11, uiScript voteGame; uiScript closeingame, voteflag CV_SVF_GAMETYPE )
+	MULTILEFT( 8, 248+2, .80*(WINDOW_WIDTH-18), 10, "Game Type:", .2, 8, "ui_voteGameType", cvarFloatList { "Single-Map Objective" 2 "Stopwatch" 3 "Last Man Standing" 5 } voteflag CV_SVF_GAMETYPE, "Select the game type to vote on" )
+	NAMEDBUTTONEXT( "bttnextGameType", 6+.80*(WINDOW_WIDTH-18)+6, 248, .20*(WINDOW_WIDTH-18), 14, "OK", .24, 11, uiScript voteGame; uiScript closeingame, voteflag CV_SVF_GAMETYPE )
 	
 	itemDef {
 		name		"nfleftbackPoll:"
 		group		GROUP_NAME
-		rect		$evalfloat(40+8) $evalfloat(248+2) $evalfloat(.80*(WINDOW_WIDTH-18)-40) 10
+		rect		$evalfloat(40+8) $evalfloat(266+2) $evalfloat(.80*(WINDOW_WIDTH-18)-40) 10
 		style		WINDOW_STYLE_FILLED
 		backcolor	.5 .5 .5 .2
 		visible		1
 		voteFlag	CV_SVF_POLL
 		decoration
 	}
-	EDITFIELDLEFTEXT( 8, 248+2, .80*(WINDOW_WIDTH-18), 10, "Poll:", .2, 8, "ui_poll", 200, 28, voteflag CV_SVF_POLL, "Enter the text for your poll" )
-	NAMEDBUTTONEXT( "bttnextPoll", 6+.80*(WINDOW_WIDTH-18)+6, 248, .20*(WINDOW_WIDTH-18), 14, "OK", .24, 11, uiScript votePoll; uiScript closeingame, voteflag CV_SVF_POLL )
+	EDITFIELDLEFTEXT( 8, 266+2, .80*(WINDOW_WIDTH-18), 10, "Poll:", .2, 8, "ui_poll", 200, 28, voteflag CV_SVF_POLL, "Enter the text for your poll" )
+	NAMEDBUTTONEXT( "bttnextPoll", 6+.80*(WINDOW_WIDTH-18)+6, 266, .20*(WINDOW_WIDTH-18), 14, "OK", .24, 11, uiScript votePoll; uiScript closeingame, voteflag CV_SVF_POLL )
 
 
 	BUTTON( 6, WINDOW_HEIGHT-24, WINDOW_WIDTH-12, 18, "BACK", .3, 14, close ingame_vote_misc ; open ingame_vote )
