@@ -6,7 +6,7 @@
 #define WINDOW_Y		16
 //#define WINDOW_WIDTH	128
 #define WINDOW_WIDTH	296
-#define WINDOW_HEIGHT	330
+#define WINDOW_HEIGHT	348
 #define GROUP_NAME		"grpIngameVoteMiscRefRcon"
 
 // Macros //
@@ -72,48 +72,49 @@ menuDef {
 	BUTTONEXT( 6+.5*(WINDOW_WIDTH-18)+6, 122, .5*(WINDOW_WIDTH-18), 14, "ANTI-LAG OFF", .24, 11, exec "cmd ref antilag 0"; uiScript closeingame, settingEnabled CV_SVS_ANTILAG )
 	BUTTON( 6+.5*(WINDOW_WIDTH-18)+6, 140, .5*(WINDOW_WIDTH-18), 14, "SURRENDER", .24, 11, exec "cmd ref surrender"; uiScript closeingame )
 
-	BUTTON( 6, 158, WINDOW_WIDTH-12, 14, "COMPETITION SETTINGS", .24, 11, exec "cmd ref comp"; uiScript closeingame )
-	BUTTON( 6, 176, WINDOW_WIDTH-12, 14, "PUBLIC SETTINGS", .24, 11, exec "cmd ref pub"; uiScript closeingame )
+	BUTTON( 6, 158, WINDOW_WIDTH-12, 14, "COIN TOSS", .24, 11, exec "cmd ref cointoss"; uiScript closeingame )
+	BUTTON( 6, 176, WINDOW_WIDTH-12, 14, "COMPETITION SETTINGS", .24, 11, exec "cmd ref comp"; uiScript closeingame )
+	BUTTON( 6, 194, WINDOW_WIDTH-12, 14, "PUBLIC SETTINGS", .24, 11, exec "cmd ref pub"; uiScript closeingame )
 
-	MULTILEFT( 8, 194+2, .80*(WINDOW_WIDTH-18), 10, "Warmup Damage:", .2, 8, "ui_voteWarmupDamage", cvarFloatList { "None" 0 "Enemies" 1 "Everyone" 2 }, "Select the warm-up damage mode to vote on" )
-	NAMEDBUTTON( "bttnextWarmupDamage", 6+.80*(WINDOW_WIDTH-18)+6, 194, .20*(WINDOW_WIDTH-18), 14, "OK", .24, 11, uiScript refWarmupDamage; uiScript closeingame )
+	MULTILEFT( 8, 212+2, .80*(WINDOW_WIDTH-18), 10, "Warmup Damage:", .2, 8, "ui_voteWarmupDamage", cvarFloatList { "None" 0 "Enemies" 1 "Everyone" 2 }, "Select the warm-up damage mode to vote on" )
+	NAMEDBUTTON( "bttnextWarmupDamage", 6+.80*(WINDOW_WIDTH-18)+6, 212, .20*(WINDOW_WIDTH-18), 14, "OK", .24, 11, uiScript refWarmupDamage; uiScript closeingame )
 
 	itemDef {
 		name		"nfleftbackTimelimit:"
 		group		GROUP_NAME
-		rect		$evalfloat(76+8) $evalfloat(212+2) $evalfloat(.45*(WINDOW_WIDTH-18)-76) 10
+		rect		$evalfloat(76+8) $evalfloat(230+2) $evalfloat(.45*(WINDOW_WIDTH-18)-76) 10
 		style		WINDOW_STYLE_FILLED
 		backcolor	.5 .5 .5 .2
 		visible		1
 		decoration
 	}
-	NUMERICFIELDLEFTEXT( 8, 212+2, .80*(WINDOW_WIDTH-18), 10, "Time Limit:", .2, 8, "ui_voteTimelimit", 6, "", "Specify a time limit to vote on" )
-	NAMEDBUTTON( "bttnextTimelimit", 6+.80*(WINDOW_WIDTH-18)+6, 212, .20*(WINDOW_WIDTH-18), 14, "OK", .24, 11, uiScript refTimelimit; uiScript closeingame )
+	NUMERICFIELDLEFTEXT( 8, 230+2, .80*(WINDOW_WIDTH-18), 10, "Time Limit:", .2, 8, "ui_voteTimelimit", 6, "", "Specify a time limit to vote on" )
+	NAMEDBUTTON( "bttnextTimelimit", 6+.80*(WINDOW_WIDTH-18)+6, 230, .20*(WINDOW_WIDTH-18), 14, "OK", .24, 11, uiScript refTimelimit; uiScript closeingame )
 
-	MULTILEFT( 8, 230+2, .80*(WINDOW_WIDTH-18), 10, "Game Type:", .2, 8, "ui_voteGameType", cvarFloatList { "Single-Map Objective" 2 "Stopwatch" 3 "Last Man Standing" 5 }, "Select the game type to vote on" )
-	NAMEDBUTTON( "bttnextGameType", 6+.80*(WINDOW_WIDTH-18)+6, 230, .20*(WINDOW_WIDTH-18), 14, "OK", .24, 11, uiScript refGame; uiScript closeingame )
+	MULTILEFT( 8, 248+2, .80*(WINDOW_WIDTH-18), 10, "Game Type:", .2, 8, "ui_voteGameType", cvarFloatList { "Single-Map Objective" 2 "Stopwatch" 3 "Last Man Standing" 5 }, "Select the game type to vote on" )
+	NAMEDBUTTON( "bttnextGameType", 6+.80*(WINDOW_WIDTH-18)+6, 248, .20*(WINDOW_WIDTH-18), 14, "OK", .24, 11, uiScript refGame; uiScript closeingame )
 	
 	itemDef {
 		name		"nfleftbackPoll:"
 		group		GROUP_NAME
-		rect		$evalfloat(40+8) $evalfloat(248+2) $evalfloat(.80*(WINDOW_WIDTH-18)-40) 10
+		rect		$evalfloat(40+8) $evalfloat(266+2) $evalfloat(.80*(WINDOW_WIDTH-18)-40) 10
 		style		WINDOW_STYLE_FILLED
 		backcolor	.5 .5 .5 .2
 		visible		1
 		voteFlag	CV_SVF_POLL
 		decoration
 	}
-	EDITFIELDLEFTEXT( 8, 248+2, .80*(WINDOW_WIDTH-18), 10, "Poll:", .2, 8, "ui_poll", 200, 28, "", "Enter the text for your poll" )
-	NAMEDBUTTON( "bttnextPoll", 6+.80*(WINDOW_WIDTH-18)+6, 248, .20*(WINDOW_WIDTH-18), 14, "OK", .24, 11, uiScript refPoll; uiScript closeingame )
+	EDITFIELDLEFTEXT( 8, 266+2, .80*(WINDOW_WIDTH-18), 10, "Poll:", .2, 8, "ui_poll", 200, 28, "", "Enter the text for your poll" )
+	NAMEDBUTTON( "bttnextPoll", 6+.80*(WINDOW_WIDTH-18)+6, 266, .20*(WINDOW_WIDTH-18), 14, "OK", .24, 11, uiScript refPoll; uiScript closeingame )
 
-	BUTTONEXT( 6, 266, WINDOW_WIDTH-12, 14, "PAUSE", .24, 11, exec "cmd ref pause"; uiScript closeingame, settingDisabled CV_SVS_PAUSE )
-	BUTTONEXT( 6, 266, WINDOW_WIDTH-12, 14, "UNPAUSE", .24, 11, exec "cmd ref unpause"; uiScript closeingame, settingEnabled CV_SVS_PAUSE )
+	BUTTONEXT( 6, 284, WINDOW_WIDTH-12, 14, "PAUSE", .24, 11, exec "cmd ref pause"; uiScript closeingame, settingDisabled CV_SVS_PAUSE )
+	BUTTONEXT( 6, 284, WINDOW_WIDTH-12, 14, "UNPAUSE", .24, 11, exec "cmd ref unpause"; uiScript closeingame, settingEnabled CV_SVS_PAUSE )
 	
-	BUTTONEXT( 6, 284, .5*(WINDOW_WIDTH-18), 14, "LOCK TEAMS", .24, 11, exec "cmd ref lock"; uiScript closeingame, settingDisabled CV_SVS_LOCKTEAMS )
-	BUTTONEXT( 6, 284, .5*(WINDOW_WIDTH-18), 14, "UNLOCK TEAMS", .24, 11, exec "cmd ref unlock"; uiScript closeingame, settingEnabled CV_SVS_LOCKTEAMS )
+	BUTTONEXT( 6, 302, .5*(WINDOW_WIDTH-18), 14, "LOCK TEAMS", .24, 11, exec "cmd ref lock"; uiScript closeingame, settingDisabled CV_SVS_LOCKTEAMS )
+	BUTTONEXT( 6, 302, .5*(WINDOW_WIDTH-18), 14, "UNLOCK TEAMS", .24, 11, exec "cmd ref unlock"; uiScript closeingame, settingEnabled CV_SVS_LOCKTEAMS )
 	
-	BUTTONEXT( 6+.5*(WINDOW_WIDTH-18)+6, 284, .5*(WINDOW_WIDTH-18), 14, "LOCK SPECS", .24, 11, exec "cmd ref speclock"; uiScript closeingame, settingDisabled CV_SVS_LOCKSPECS )
-	BUTTONEXT( 6+.5*(WINDOW_WIDTH-18)+6, 284, .5*(WINDOW_WIDTH-18), 14, "UNLOCK SPECS", .24, 11, exec "cmd ref specunlock"; uiScript closeingame, settingEnabled CV_SVS_LOCKSPECS )
+	BUTTONEXT( 6+.5*(WINDOW_WIDTH-18)+6, 302, .5*(WINDOW_WIDTH-18), 14, "LOCK SPECS", .24, 11, exec "cmd ref speclock"; uiScript closeingame, settingDisabled CV_SVS_LOCKSPECS )
+	BUTTONEXT( 6+.5*(WINDOW_WIDTH-18)+6, 302, .5*(WINDOW_WIDTH-18), 14, "UNLOCK SPECS", .24, 11, exec "cmd ref specunlock"; uiScript closeingame, settingEnabled CV_SVS_LOCKSPECS )
 
 	BUTTON( 6, WINDOW_HEIGHT-24, WINDOW_WIDTH-12, 18, "BACK", .3, 14, close ingame_vote_misc_refrcon ; open ingame_vote )
 }
