@@ -4908,31 +4908,32 @@ const char* bg_fireteamNames[MAX_FIRETEAMS / 2] = {
 
 const voteType_t voteToggles[] =
 	{
-		{ "vote_allow_comp",			CV_SVF_COMP },
-		{ "vote_allow_gametype",		CV_SVF_GAMETYPE },
-		{ "vote_allow_kick",			CV_SVF_KICK },
-		{ "vote_allow_map",				CV_SVF_MAP },
-		{ "vote_allow_matchreset",		CV_SVF_MATCHRESET },
-		{ "vote_allow_mutespecs",		CV_SVF_MUTESPECS },
-		{ "vote_allow_nextmap",			CV_SVF_NEXTMAP },
-		{ "vote_allow_pub",				CV_SVF_PUB },
-		{ "vote_allow_referee",			CV_SVF_REFEREE },
-		{ "vote_allow_shuffleteamsxp",	CV_SVF_SHUFFLETEAMS },
-		{ "vote_allow_swapteams",		CV_SVF_SWAPTEAMS },
-		{ "vote_allow_friendlyfire",	CV_SVF_FRIENDLYFIRE },
-		{ "vote_allow_timelimit",		CV_SVF_TIMELIMIT },
-		{ "vote_allow_warmupdamage",	CV_SVF_WARMUPDAMAGE },
-		{ "vote_allow_antilag",			CV_SVF_ANTILAG },
-		{ "vote_allow_balancedteams",	CV_SVF_BALANCEDTEAMS },
-		{ "vote_allow_muting",			CV_SVF_MUTING },
-		{ "vote_allow_surrender",		CV_SVF_SURRENDER },
-		{ "vote_allow_restartcampaign",	CV_SVF_RESTARTCAMPAIGN },
-		{ "vote_allow_nextcampaign",	CV_SVF_NEXTCAMPAIGN },
-		{ "vote_allow_poll",			CV_SVF_POLL },
-		{ "vote_allow_maprestart",		CV_SVF_MAPRESTART },
+		{ "vote_allow_comp",				CV_SVF_COMP },
+		{ "vote_allow_gametype",			CV_SVF_GAMETYPE },
+		{ "vote_allow_kick",				CV_SVF_KICK },
+		{ "vote_allow_map",					CV_SVF_MAP },
+		{ "vote_allow_matchreset",			CV_SVF_MATCHRESET },
+		{ "vote_allow_mutespecs",			CV_SVF_MUTESPECS },
+		{ "vote_allow_nextmap",				CV_SVF_NEXTMAP },
+		{ "vote_allow_pub",					CV_SVF_PUB },
+		{ "vote_allow_referee",				CV_SVF_REFEREE },
+		{ "vote_allow_shuffleteamsxp",		CV_SVF_SHUFFLETEAMS },
+		{ "vote_allow_swapteams",			CV_SVF_SWAPTEAMS },
+		{ "vote_allow_friendlyfire",		CV_SVF_FRIENDLYFIRE },
+		{ "vote_allow_timelimit",			CV_SVF_TIMELIMIT },
+		{ "vote_allow_warmupdamage",		CV_SVF_WARMUPDAMAGE },
+		{ "vote_allow_antilag",				CV_SVF_ANTILAG },
+		{ "vote_allow_balancedteams",		CV_SVF_BALANCEDTEAMS },
+		{ "vote_allow_muting",				CV_SVF_MUTING },
+		{ "vote_allow_surrender",			CV_SVF_SURRENDER },
+		{ "vote_allow_restartcampaign",		CV_SVF_RESTARTCAMPAIGN },
+		{ "vote_allow_nextcampaign",		CV_SVF_NEXTCAMPAIGN },
+		{ "vote_allow_poll",				CV_SVF_POLL },
+		{ "vote_allow_maprestart",			CV_SVF_MAPRESTART },
 		{ "vote_allow_shufflenorestart",	CV_SVF_SHUFFLENORESTART },
-		{ "vote_allow_putspec",			CV_SVF_PUTSPEC }
-
+		{ "vote_allow_putspec",				CV_SVF_PUTSPEC },
+		// pheno: cointoss
+		{ "vote_allow_cointoss",			CV_SVF_COINTOSS }
 	};
 
 int numVotesAvailable = sizeof(voteToggles) / sizeof(voteType_t);
